--- a/src/Loading screen/styles.css
+++ b/src/Loading screen/styles.css
@@ -32,6 +32,7 @@ main {
     width: 7%;
     opacity: 0;
     transition: ease-in 1s;
+    user-select: none;
 }
 #logo-samaify img {
     width: 100%;
@@ -49,20 +50,32 @@ main {
     transition: opacity 1s;
 }
 #outer-loader {
+    display: flex;
+    align-items: center;
     padding: 3px;
     width: 100%;
-    height: 20px;
     border-radius: 40px;
     border: 1px solid var(--main-color);
 }
 #inner-loader {
-    width: 0%;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 0;
+    height: 20px;
     border-radius: inherit;
     background-color: var(--main-color-faded);
-    transition: width 4.1s;
+    transition: width 66.1s;
     transition-timing-function: cubic-bezier(0, .6, .9, 0.1);
+    color: white;
 }
+#outer-loader p{
+    position: absolute;
+    left: 49%;
+    color: white;
+    margin: 0 auto;
+}
+
 #title {
     font-size: 3rem;
     font-weight: 100;
@@ -95,8 +108,8 @@ main {
     align-items: center;
     position: relative;
     z-index: 1;
-    width: 375px;
-    height: 313px;
+    width: 21vw;
+    height: 33vh;
     opacity: 0;
     transition: opacity .8s ease-in;
 }
@@ -128,25 +141,26 @@ main {
     -o-background-size: cover;
     background-size: cover;
 }
-.features-hover-class {
+.features-click-class {
     opacity: 1 !important;
-    width: calc(375px * 1.2);
-    height: calc(313px * 1.2);
+    width: calc(21vw * 1.2);
+    height: calc(33vh * 1.2);
     box-shadow: 0 0 5px gray, 0 0 10px gray, 0 0 15px rgba(34, 239, 196, 0.2), 0 0 23px rgba(34, 239, 196, 0.2), 0 0 30px rgba(34, 239, 196, 0.2), 0 0 40px rgba(34, 239, 196, 0.2), 0 0 50px rgba(34, 239, 196, 0.2);
 }
 .features-text {
     font-size: 3rem;
     font-weight: 100;
     color: white;
-    opacity: 0;
-    transition: opacity .4s linear;
+    opacity: 0.7;
+    transition: all .4s linear;
     transition-timing-function: cubic-bezier(.75, 1.03, .69, 1.2);
-    transform: translateY(-24vh);
+    transform: translateY(-21vh);
     user-select: none;
 }
-.features:hover .features-text {
-    opacity: 1;
+.features:hover, .features:hover .features-text{
+    opacity: 1 !important;
 }
+
 .info {
     height: auto;
     width: 0;
