--- a/src/About Us/aboutUs.css
+++ b/src/About Us/aboutUs.css
@@ -1,7 +1,7 @@
 body {
 	margin:0;
 	padding: 0;
-	background-color: #F6F6F6;
+	background-color: #F0F0F0;
 }
 
 #navegador {
@@ -12,13 +12,14 @@ body {
 }
 
 #menuHorizontal {
+	background: url("fondo2.jpg") no-repeat;
+  	background-size: cover;
 	display: inline-flex;
-	height: 300px;
 	width: 85%;
+	height: 750px;
 	float: right;
 	color: #0085A1;
 	text-align: center;
-	background-color: black;
 	justify-content: flex-end;
 	align-items: flex-end;
 }
@@ -48,9 +49,10 @@ h1 {
 	font-size: 70px;
 	color: #0085A1;
 	padding-left: 20px;
+	margin-bottom: 20px;
 }
 
-#eslogan {
+.eslogan {
 	color: #0085A1;
 	font-size: 30px;
 	padding: 0px 0px 0px 20px;
@@ -120,10 +122,11 @@ h3 {
 	display: flex;
 	flex-wrap: wrap;
 	width: 60%;
-	height: 1200px;
+	height: 1400px;
 	margin: 0 auto;
 	background-color: white;
 	padding: 10px 0px 10px 30px;
+	margin-bottom: 200px;
 }
 
 .columna2 {
@@ -141,7 +144,11 @@ h3 {
 #quienesSomos img {
 	width: 100%;
 	height: auto;
-	
+	transition: transform ease 1000ms;
+}
+
+#quienesSomos img:hover {
+	transform:  scale(1.03);
 }
 
 #eslogan {
@@ -161,4 +168,78 @@ h3 {
 	color: black;
 	width: 40%;
 	float: right;
+}
+
+#formulario {
+	max-width: 1000px;
+	height: 500px;
+	width: 80%;
+	margin: 0 auto;
+	display: block;
+	justify-content: center;
+	color: blue;
+}
+
+form {
+	text-align: center;
+	padding-top: 20px;
+}
+
+button {
+	background-color: #827ffe;
+	width: 11%;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+input,textarea,button {
+	margin: 20px;
+	padding: 20px;
+	border-radius: 15px;
+	border: none;
+	transition: transform ease 1000ms 
+}
+
+input,textarea {
+	width: 50%;
+}
+
+textarea {
+	height: 150px;
+}
+
+input:hover,textarea:hover,button:hover {
+	transform:  scale(1.1);
+}
+
+#formulario form img {
+	width: 20px;
+	height: 20px;
+	margin-right: 5px;
+}
+
+footer {
+	margin: 150px 0px 100px 0px;
+	background-color: #FFFFFF;
+	height: 200px;
+	width: 100%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+footer img {
+	width: 80px;
+	height: auto;
+	margin: 10px;
+}
+
+.horizontal2 {
+	height: 10px;
+	width: 5%;
+	background-color: #F0F0F0;
+	margin: 0px 20px;
 }
