--- a/src/Navegador Reto1/navegadorReto1.css
+++ b/src/Navegador Reto1/navegadorReto1.css
@@ -10,24 +10,24 @@ body {
   	background-color: #f96332;
 }
 
-#logo {
+#logoMenu {
     padding: 0.5rem 0.7rem;
     font-size: 1.5em;
     text-align: center;
 }
 
-ul {
+#menu ul {
   	list-style-type: none;
   	padding: 0;
 }
 
 #menu p {
-	margin: 0;
+	  margin: 0;
     line-height: 30px;
     padding-left: 10px;
 }
 
-a {
+#menu a {
 	margin: 10px 15px 0;
     border-radius: 30px;
     color: #FFFFFF;
@@ -44,24 +44,24 @@ div.content {
   height: 1000px;
 }
 
-hr {
+#menu hr {
     height: 0.1px;
     width: 85%;
     background-color: #FFFFFF;
 }
 
-ul a:hover {
+ #menu ul a:hover {
 	background-color: rgba(255,255,255,0.2);
 	transition: all 200ms ease 0s;
 }
 
-ul img {
+#menu ul img {
 	width: 25px;
 	height: auto;
 	margin-right: 20px;
 }
 
-ul a:active {
+#menu ul a:active {
 	background-color: #FFFFFF;
 	color: #f96332;
 }
