--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,18 @@
     height: 150px;
 }
 
+.content {
+    width: 85%;
+    float: right;
+    padding: 50px;
+}
+
 /*ABOUT US*/
+body {
+    margin: 0;
+    font-family: Roboto;
+    background-color: #F4F4F4;
+}
 
 #menu {
     width: 15%;
@@ -72,7 +83,7 @@
 }
 
 #menuHorizontal {
-    background: url("images/fondo2.jpg") no-repeat;
+    background: url("../img/fondo2.jpg") no-repeat;
     background-size: cover;
     display: inline-flex;
     width: 85%;
@@ -118,6 +129,11 @@ h1 {
     padding: 0px 0px 0px 20px;
     margin-top: 100px ;
 }
+
+.persona:hover + .text{
+    opacity: 1;
+}
+
 
 h4 {
     padding-left: 15px;
@@ -246,13 +262,14 @@ h4 {
 
 .text{
     position: relative;
+    opacity: 0;
     bottom: 150px;
     color: black;
     display:block;
     width:100%;
     text-align:center;
-transform(0px,0px,1);
-    transition;
+    transform(0px,0px,1);
+    transition: transform;
 }
 
 .persona:hover{
@@ -396,74 +413,5 @@ footer img {
     border-radius: 10px;
     border: 1px solid #f96332;
 }
-/*NAVEGADOR LATERAL*/
-body {
-    margin:0;
-    font-family: 'Roboto';
-    margin:0;
-    padding: 0;
-    background-color: #F0F0F0;
-}
 
-#menu {
-    width: 260px;
-    position: fixed;
-    height: 100%;
-    background-color: #f96332;
-}
 
-#logo {
-    padding: 0.5rem 0.7rem;
-    font-size: 1.5em;
-    text-align: center;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-#menu p {
-    margin: 0;
-    line-height: 30px;
-    padding-left: 10px;
-}
-
-a {
-    margin: 10px 15px 0;
-    border-radius: 30px;
-    color: #FFFFFF;
-    display: block;
-    text-transform: uppercase;
-    padding: 10px 8px;
-    text-decoration: none;
-    transition: all 1000ms ease 0s;
-}
-
-div.content {
-    margin-left: 300px;
-    padding: 1px 16px;
-    height: 1000px;
-}
-
-hr {
-    height: 0.1px;
-    width: 85%;
-    background-color: #FFFFFF;
-}
-
-ul a:hover {
-    background-color: rgba(255,255,255,0.2);
-    transition: all 200ms ease 0s;
-}
-
-ul img {
-    width: 25px;
-    height: auto;
-    margin-right: 20px;
-}
-
-ul a:active {
-    background-color: #FFFFFF;
-    color: #f96332;
-}
