--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -217,7 +217,6 @@ h4 {
 }
 
 #panelAbajo ul li {
-    list-style-type: none;
     padding: 15px;
 }
 
@@ -254,31 +253,31 @@ h4 {
     padding-left: 15px;
 }
 
+.columna li {
+    list-style-type: square;
+}
+
 #quienesSomos .persona {
     width: 100%;
     height: auto;
-    transition: transform ease 500ms;
+    transition: transform ease 1500ms;
 }
 
 .text{
     position: relative;
     opacity: 0;
-    bottom: 150px;
+    bottom: 200px;
     color: black;
     display:block;
     width:100%;
-    text-align:center;
-    transform(0px,0px,1);
-    transition: transform;
+    transition: border-radius 1000ms ease;
 }
 
 .persona:hover{
-    transform:scale(0.25);
-    border-radius: 75%;
-}
-
-.persona:hover #quienesSomos{
-    background-color: black;
+    transform:scale(0.5);
+    border-radius: 50%;
+    position: relative;
+    bottom: 100px;
 }
 
 #headerEquipo {
@@ -383,22 +382,18 @@ footer img {
 }
 
 /*SANDBOX*/
+
 .mediano{
     width: 150px;
     margin-right: 10px;
     margin-bottom: 15px;
 }
+
 .espacio{
     margin-right: 10px;
 
 }
-#datos{
 
-}
-
-#botones{
-
-}
 #linea{
     background-color: #f96332 ;
     height: 1px;
