--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,7 +45,8 @@
     border-radius: 5px;
     border-top-left-radius: 0px;
     border: 2px solid bisque;
-    width: 1025px;
+    width: 60%;
+    height: 60%;
 }
 
 /*ABOUT US*/
