--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -709,6 +709,13 @@ footer img {
     }
 }
 
+@media screen and (min-width: 951px) and (max-width: 1300px){
+    .quienesSomosText {
+        bottom: 250px;
+        font-size: 16px;
+    }
+}
+
 /*SANDBOX*/
 
 .mediano{
