--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,6 +49,9 @@
 }
 
 /*ABOUT US*/
+html{
+    scroll-behavior: smooth;
+}
 body {
     margin: 0;
     font-family: Roboto, serif;
@@ -328,6 +331,7 @@ h4 {
     transition: border-radius 1000ms ease;
     font-size: 20px;
     color: #0085A1;
+    pointer-events: none;
 }
 
 .persona:hover{
@@ -1031,6 +1035,12 @@ li {
         transform: none;
         opacity: 0.25;
     }
+}
+
+#copyright{
+    position: absolute;
+    bottom: 100px;
+    font-size: 13px;
 }
 
 
