--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,24 @@
+/*GLOBAL*/
+html{
+    scroll-behavior: smooth;
+}
+body {
+    margin: 0;
+    font-family: Roboto, serif;
+    background-color: #F4F4F4;
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 /*GRAFICA*/
 
 #miGrafica canvas{
@@ -49,14 +70,8 @@
 }
 
 /*ABOUT US*/
-html{
-    scroll-behavior: smooth;
-}
-body {
-    margin: 0;
-    font-family: Roboto, serif;
-    background-color: #F4F4F4;
-}
+
+
 
 header nav{
     width: 15%;
@@ -593,7 +608,8 @@ footer img {
         position: fixed;
         margin: 0;
         background: #f96332;
-        transition: ease-in 1s ;
+        transition: ease-in 1s;
+        z-index: 3000;
     }
 
     #tituloMenu {
